--- a/作業08/index.htm
+++ b/作業08/index.htm
@@ -45,7 +45,7 @@
 <div id="demo"></div>
 <script>
     function shoppingInfo() {
-        const X = document.getElementById("form01");
+        const x = document.getElementById("form01");
         var item = "";
         var price = 0;
         var text = "<h4>您的購物資訊如下:</h4>";
