--- a/作業14/index.htm
+++ b/作業14/index.htm
@@ -34,7 +34,7 @@
                 </script>
             </head>
             <body>
-            <table>
+            <table height="98%">
                 <tr>
                     <td>
                         <img src="pic/01.jpg" id="pic01" width="60" hight="60" alt="我">
